<resources>
    <string name="app_name">POS</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="food">Food</string>
    <string name="drinks">Drinks</string>
    <string name="shisha">Shisha</string>
    <string name="login">Login</string>
    <string name="placeorder">Place Order</string>
    <string name="username">Username</string>
    <string name="department">Department</string>
    <string name="table">Table</string>
    <string name="no">no.</string>
    <string name="loading">Loading!!!</string>
    <string name="pleasewait">Please Wait.....</string>
    <string name="uploading">Uploading.....</string>
    <string name="updating">Updating......</string>
    <string name="remarks">Remarks</string>
    <string name="addCom">Add Comment</string>
    <string name="delete">Delete</string>
    <string name="submit">Submit</string>
    <string name="qty">Qty</string>
    <string name="instruction">Instructions</string>
    <string name="changeTable">Change Table</string>
    <string name="server">Server</string>
    <string name="password">Enter Password</string>
    <string name="search">Search</string>
    <string name="cancel">Cancel</string>
    <string name="cancelOrder">Cancel Order</string>
    <string name="placeOrder">Place Order</string>
    <string name="posting">Posting!!!</string>
    <string name="Room">Room</string>
    <string name="sending">Sending!!!</string>
    <string name="sendingServer">Sending to Server!!!</string>
    <string name="selectItems">Select Items First</string>
    <string name="fragment1">This is food fragment</string>
    <string name="fragment2">This is drinks fragment</string>
    <string name="fragment3">This is shishas fragment</string>
    <string name="menu">Menu</string>
    <string name="menuItems">Menu Items</string>
    <string name="cart">Cart Items</string>
    <string name="add">Add</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="imgdes">Image Description</string>
    <string name="chicken">Italian Mexico Chicken Pizza with sauces and tartar sauce and finger chips</string>
    <string name="price">Rs. 500000</string>
    <string name="_27">27</string>
    <string name="settings">Settings</string>
    <string name="changeServer">Change Server</string>
    <string name="_100">100</string>
    <string name="totalAmount">Amt : </string>
    <string name="addinst">Add Instruction</string>
    <string name="extra">EXTRA 1</string>
    <string name="personal">Personal Information</string>
    <string name="customer">Enter Customer Name</string>
    <string name="cnumber">Enter Customer Number</string>
    <string name="order">Order</string>
    <string name="vip">VIP</string>
    <string name="comple">Complimentary</string>
    <string name="toTable">To Table</string>
    <string name="pricer">50000</string>
    <string name="orderInfo">Ordered Information</string>
    <string name="select_your_combo">Select Your Combo</string>
    <string name="save">save</string>
    <string name="select_your_combo_item">Select Your Combo Item</string>
    <string name="selected_combo_item">Selected Combo Item</string>
    <string name="_19_00">19:00</string>
    <string name="ttl_800000">ttl: 800000</string>
    <string name="pos_nepal">Pos Nepal</string>


</resources>
