<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="2dp"

    android:orientation="vertical">

    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="4dp"
        android:text="@string/personal"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="1dp"
        app:cardCornerRadius="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:id="@+id/cname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:hint="@string/customer"
                android:inputType="text"
                android:textColor="@color/black"
                tools:ignore="Autofill" />

            <EditText
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:id="@+id/cnumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/cname"
                android:layout_marginTop="3dp"
                android:hint="@string/cnumber"
                android:inputType="number"
                tools:ignore="Autofill" />

            <RadioGroup
                android:layout_marginTop="5dp"
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/cnumber"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radiomain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/order"/>

                <RadioButton
                    android:id="@+id/radioVIP"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/vip" />

                <RadioButton
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:id="@+id/radiocomp"
                    android:text="@string/comple"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RadioGroup>
            <Button
                android:padding="5dp"
                android:layout_below="@+id/radioGroup"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:id="@+id/submitinfo"
                android:text="@string/submit"
                android:layout_marginBottom="5dp"
                android:textSize="25sp"
                android:textColor="@color/white"
                android:background="@drawable/positive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>