<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_marginTop="5dp"
    android:layout_marginEnd="5dp"
    android:layout_marginStart="5dp"
    android:layout_marginBottom="2dp"
    android:layout_height="wrap_content">


        <TextView
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:id="@+id/oitemName"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/chicken"
            android:layout_width="wrap_content"
            android:maxWidth="350dp"
            android:layout_toLeftOf="@+id/oitemPrice"
            android:layout_toStartOf="@+id/oitemPrice"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_height="wrap_content"/>
        <TextView

            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:textSize="16sp"
            android:textColor="@color/greener"
            android:textStyle="bold"
            android:id="@+id/oitemPrice"
            android:text="@string/pricer"
            android:layout_width="wrap_content"
            android:gravity="end"
            android:layout_toLeftOf="@+id/oQnty"
            android:layout_toStartOf="@+id/oQnty"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/red"
            android:id="@+id/oQnty"
            android:text="@string/qty"
            android:layout_toLeftOf="@+id/oAmount"
            android:layout_toStartOf="@+id/oAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView

            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/greener"
            android:text="@string/totalAmount"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/oAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center" />
        <View
            android:id="@+id/line1"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:layout_below="@id/oAmount"
            android:background="@color/black"
            android:layout_width="match_parent"
            android:layout_height="2dp"
       />



</RelativeLayout>
