<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/titleView"
        android:text="@string/select_your_combo"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:gravity="center"
        android:background="#436D55"
        android:layout_width="match_parent"
        android:layout_height="40dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/combo_cat_list"
        android:layout_below="@+id/titleView"
        android:padding="8dp"
        android:layout_margin="2dp"
        android:layout_width="match_parent"
        android:minHeight="50dp"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_below="@+id/combo_cat_list"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:weightSum="100"
        >
        <Button
            android:text="@string/save"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:drawableLeft="@drawable/save"
            android:drawableStart="@drawable/save"
            android:id="@+id/combocatsaved"
            android:layout_weight="50"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            tools:ignore="NestedWeights" />
        <Button
            android:text="@string/cancel"
            android:textColor="@color/black"
            android:drawableStart="@drawable/cancel"
            android:drawableLeft="@drawable/cancel"
            android:textSize="15sp"
            android:id="@+id/combocatcancel"
            android:layout_weight="50"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>

    </LinearLayout>

</RelativeLayout>