<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/menu_card"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    app:cardBackgroundColor="@color/cardbackground"
    app:cardElevation="2dp">

    <RelativeLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:gravity="center">

        <ImageView
            android:visibility="gone"
            android:layout_marginTop="2dp"
            android:id="@+id/item_image"
            android:layout_width="150dp"
            android:layout_height="80dp"
            android:contentDescription="@string/imgdes"
            android:scaleType="fitXY"
            android:src="@drawable/momo" />

        <TextView
            android:textSize="18sp"
            android:layout_margin="1dp"
            android:id="@+id/item_name"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/item_image"
            android:background="@color/white"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:paddingRight="2dp"
            android:paddingLeft="2dp"
            android:maxLines="4"
            android:minLines="4"
            android:text="@string/chicken"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/item_price"
            android:layout_width="150dp"
            android:layout_height="20dp"
            android:layout_below="@id/item_name"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/price"
            android:textColor="@color/red"
            android:textStyle="italic" />

        <androidx.cardview.widget.CardView
            android:id="@+id/add_items_to_cart"
            android:layout_width="95dp"
            android:layout_height="30dp"
            android:layout_below="@+id/item_price"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:gravity="center"
            android:visibility="gone"
            app:cardBackgroundColor="@color/greener"
            app:cardCornerRadius="20dp"
            app:cardElevation="3dp">

            <TextView
                android:id="@+id/add_items_in"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/add"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </androidx.cardview.widget.CardView>


    </RelativeLayout>


</androidx.cardview.widget.CardView>