<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardCart"
    app:cardElevation="2dp"
    android:layout_marginTop="5dp"
    android:padding="3dp"
    android:layout_marginLeft="2dp"
    android:layout_marginRight="2dp"
    app:cardCornerRadius="10dp"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:padding="2dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/itemNameCart"
            android:textSize="17sp"
            android:textStyle="bold"
            android:text="@string/chicken"
            android:layout_margin="3dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:maxLines="3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/priceAmt"
            android:layout_below="@id/itemNameCart"
            android:layout_above="@+id/itemAmountCart"
            android:text="@string/price"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:gravity="center"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="30dp" />

      <!--  <TextView
            android:id="@+id/qnty"
            android:text="@string/qty"
            android:singleLine="true"
            android:layout_marginTop="8dp"
            android:textSize="20sp"
            android:layout_toStartOf="@id/addQty"
            android:layout_toLeftOf="@id/addQty"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:layout_below="@id/itemNameCart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
-->
        <ImageButton
            android:id="@+id/addQty"
            android:layout_below="@+id/itemNameCart"
            android:background="@drawable/right"
            android:layout_toStartOf="@+id/itemQtyCart"
            android:layout_toLeftOf="@id/itemQtyCart"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:contentDescription="@string/imgdes" />

        <ImageButton
            android:id="@+id/minusQty"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_below="@+id/itemNameCart"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="25dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/left"
            android:contentDescription="@string/imgdes" />

        <TextView
            android:layout_below="@+id/itemNameCart"
            android:layout_toLeftOf="@id/minusQty"
            android:layout_toStartOf="@id/minusQty"
            android:textColor="@color/blue"
            android:textSize="20sp"
            android:layout_margin="5dp"
            android:id="@+id/itemQtyCart"
            android:gravity="center"
            android:text="@string/_100"
            android:layout_width="wrap_content"
            android:layout_height="30dp" />

        <TextView
            android:id="@+id/totalAmt"
            android:layout_marginStart="6dp"
            android:layout_marginLeft="6dp"
            android:layout_below="@+id/addQty"
            android:textSize="20sp"
            android:textColor="@color/red"
            android:text="@string/totalAmount"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/itemAmountCart"
            android:layout_marginTop="3dp"
            android:layout_marginStart="9dp"
            android:layout_marginLeft="9dp"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:textStyle="bold"
            android:layout_below="@id/addQty"
            android:layout_toRightOf="@id/totalAmt"
            android:layout_toEndOf="@id/totalAmt"
            android:text="@string/price"
            android:textSize="16sp"

            android:layout_height="wrap_content" />

        <Button
            android:layout_marginBottom="2dp"
            android:id="@+id/cancelOrderCart"
            android:layout_below="@id/totalAmt"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:background="#F0EEEEEE"
            android:text="@string/delete"
            android:textColor="@color/red"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="40dp" />

        <Button
            android:layout_marginBottom="2dp"
            android:id="@+id/addInsttu"
            android:layout_below="@id/totalAmt"
            android:layout_toLeftOf="@+id/cancelOrderCart"
            android:layout_toStartOf="@id/cancelOrderCart"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:textColor="@color/black"
            android:text="@string/addCom"
            android:background="#45EBEEEE"
            android:padding="10dp"

            android:layout_width="wrap_content"
            android:layout_height="40dp" />
    </RelativeLayout>

</androidx.cardview.widget.CardView>