<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardCornerRadius="30dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="891dp"
        android:orientation="vertical"
        android:weightSum="100">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="20"
            android:gravity="center"
            android:text="@string/cart"
            android:textColor="@color/black"
            android:textSize="20sp"


            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/cartItems"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="98"
            android:padding="5dp">

        </androidx.recyclerview.widget.RecyclerView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="1">

            <Button
                android:id="@+id/placeOrder"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="0.5"
                android:text="@string/placeOrder"
                tools:ignore="NestedWeights" />

            <Button
                android:id="@+id/cancelOrder"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="0.5"
                android:text="@string/cancelOrder" />

        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>