<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/pendingLayout"
    android:padding="5dp"
    android:orientation="vertical">
    <TextView
        android:id="@+id/orderINfo"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginBottom="3dp"
        android:text="@string/orderInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <androidx.recyclerview.widget.RecyclerView
        android:layout_below="@+id/orderINfo"
        android:id="@+id/pendingOrderList"
        android:padding="3dp"
        android:layout_margin="2dp"
        android:layout_width="match_parent"
        android:layout_height="300dp">

    </androidx.recyclerview.widget.RecyclerView>
    <LinearLayout
        android:layout_below="@+id/pendingOrderList"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:weightSum="100"
        android:layout_height="50dp">


        <Button
            android:text="@string/toTable"
            android:textColor="@color/white"
            android:textSize="20sp"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_gravity="center"
            android:id="@+id/toTable"
            android:layout_margin="5dp"
            android:background="@color/greener"
            android:layout_width="0dp"
            android:layout_weight="50"
            android:layout_height="wrap_content" />
        <Button
            android:text="@string/order"
            android:textSize="20sp"
            android:textColor="@color/white"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:id="@+id/toOrder"
            android:layout_margin="5dp"
            android:background="@color/red"
            android:layout_width="0dp"
            android:layout_weight="50"
            android:layout_height="wrap_content" />
    </LinearLayout>


</RelativeLayout>